syntax = "proto3";

option java_package="org.stackroute.proto";
service searchResource {
  rpc search(searchRequest) returns (searchResponse);
  rpc primaryskillSearch(primaryRequest) returns (primaryResponse);
  rpc secondaryskillSearch(secondaryRequest) returns (secondaryResponse);
  rpc userIDSearch(UserIdRequest) returns (userIdResponse);
  rpc designationSearch(designationRequest) returns (designationResponse);
  rpc jobSearch(JobRequest) returns (JobResponse);
}
message JobRequest{}
message JobResponse{}

message primaryResponse{
  repeated pr Results=1;

}

message primaryRequest {
  string primarySkil=1;
}
message secondaryRequest {
  string secondarySkill=1;
}
message UserIdRequest {
  int32 userId=1;
}
message designationRequest {
  string designation=1;
}

message searchMessage {
  string userEmail=1;
}
message pr {
  string userName = 1;
  string userEmail = 2;
  int32 userId = 3;
  string dob =4;
  string gender =5;
  string password =6;
  string name =7;
  int64 phone=8;
  string designation=9;
  string primarySkil=10;
  string secondarySkill=11;
  string responseMessage = 12;
  int32 responseCode = 13;
}
message secondaryResponse {
  string userName = 1;
  string userEmail = 2;
  int32 userId = 3; // delete this
  string dob =4;
  string gender =5;
  string password =6;
  string name =7;
  int64 phone=8;
  string designation=9;
  string primarySkil=10; //list of primary skill
  string secondarySkill=11;
  string responseMessage = 12;
  int32 responseCode = 13;
}
message userIdResponse {
  string userName = 1;
  string userEmail = 2;
  int32 userId = 3; // delete this
  string dob =4;
  string gender =5;
  string password =6;
  string name =7;
  int64 phone=8;
  string designation=9;
  string primarySkil=10; //list of primary skill
  string secondarySkill=11;
  string responseMessage = 12;
  int32 responseCode = 13;
}
message designationResponse {
  string userName = 1;
  string userEmail = 2;
  int32 userId = 3; // delete this
  string dob =4;
  string gender =5;
  string password =6;
  string name =7;
  int64 phone=8;
  string designation=9;
  string primarySkil=10; //list of primary skill
  string secondarySkill=11;
  string responseMessage = 12;
  int32 responseCode = 13;
}

message searchRequest {
 string userEmail=1;

}

message searchResponse {
  string userName = 1;
  string userEmail = 2;
  int32 userId = 3; // delete this
  string dob =4;
  string gender =5;
  string password =6;
  string name =7;
  int64 phone=8;
  string designation=9;
  string primarySkil=10; //list of primary skill
  string secondarySkill=11;
  string responseMessage = 12;
  int32 responseCode = 13;
}
